# civic-contract

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  rust-toolchain
cep47/: Cargo.toml
cep47/src/: lib.rs  logic.rs  logic_tests.rs
civic/: Cargo.toml
civic/src/: civic_token.rs  gatekeeper_control.rs  main.rs
tests/: Cargo.toml
tests/src/: civic_instance.rs  civic_tests.rs  lib.rs
