[package]
name = "civic"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package="casper-contract", version = "1.2.0" }
types = { package="casper-types", version = "1.2.0" }
cep47 = { git="https://github.com/casper-ecosystem/casper-nft-cep47", branch="develop" }

[[bin]]
name = "civic"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]

[net]
git-fetch-with-cli = true
