[package]
name = "civic"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
cep47 = { git="https://github.com/casper-ecosystem/casper-nft-cep47", branch="mcask" }

[[bin]]
name = "civic-token"
path = "src/civic_token.rs"
bench = false
doctest = false
test = false

